--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,14 @@
   --secondary-text-color-theme-light: #2196F3;
   --accent-color: #2F303A;
   --night-color:  #000;
+  --main-color: #F5F5F5;
+  --third-color: #F5F4FA;
+
+}
+
+body {
+  font-family: var(--primary-font);
+  background-color: var(--main-color);
 }
 
 .link {
@@ -17,11 +25,16 @@ ul {
 }
 
 .logo {
-    color: var(--secondary-text-color);
+  font-family: var(--secondary-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em; 
+  color: var(--night-color);
 }
 
 .menu-link {
-font-family: 'Roboto', sans-serif;
+font-family: var(--primary-font);
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
@@ -31,12 +44,12 @@ color: #212121;
 
 .menu-link:hover,
 .menu-link:focus {
-  color:#2196F3;
+  color: var(--secondary-text-color-theme-light);
 }
 
 .contact-mail,
 .contact-phone-number {
-font-family: 'Roboto', sans-serif;
+font-family: var(--primary-font);
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
@@ -48,31 +61,32 @@ color: #757575;
 .contact-mail:focus,
 .contact-phone-number:hover,
 .contact-phone-number:focus {
-color:#2196F3;
+color: var(--secondary-text-color-theme-light);
 }
 
 .page-header {
-    background-color: #FFFFFF;
+    background-color: var(--primary-text-color);
 }
 
 .pic {
-    background-color: #2F303A;
+    background-color: var(--accent-color);
 }
 
 .title {
-font-family: 'Roboto', sans-serif;
+font-family: var(--primary-font);
 font-weight: 900;
 font-size: 44px;
 line-height:1.36;
 text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
-color: #FFFFFF;
+color: var(--primary-text-color);
 }
 
 .modal-open-btn:focus,
 .modal-open-btn {
-font-family: 'Roboto', sans-serif;
+cursor: pointer;
+font-family: var(--primary-font);
 font-weight: 700;
 font-size: 16px;
 line-height: 1.88;
@@ -80,11 +94,112 @@ display: flex;
 align-items: center;
 text-align: center;
 letter-spacing: 0.06em;
-color: #FFFFFF;
-background: #2196F3;
+color: var(--primary-text-color);
+background: var(--secondary-text-color-theme-light);
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 }
 
-
+.caption {
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--secondary-text-color);
 }
+
+.lead {
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: var(--primary-text-color-theme-light);
+}
+
+.subtitle {
+font-weight: 700;
+font-size: 36px;
+line-height: 42px;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--secondary-text-color);
+}
+
+.aside {
+  background-color: var(--third-color);
+}
+
+.item {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.19;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--secondary-text-color);
+}
+
+.items {
+font-weight: 400;
+font-size: 16px;
+line-height: 1.19;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--primary-text-color-theme-light);
+}
+
+
+
+.footer-page {
+  background-color: var(--accent-color);
+}
+
+.footer-logo {
+  color: var(--primary-text-color);
+}
+
+.maps {
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: var(--primary-text-color);
+}
+
+
+.btn {
+cursor: pointer;
+font-family: var(--primary-font);
+font-weight: 500;
+font-size: 16px;
+line-height: 1.6;
+text-align: center;
+letter-spacing: 0.03em;
+}
+
+.btn:focus,
+.btn:hover {
+  color: var(--primary-text-color);
+  background-color: var(--secondary-text-color-theme-light);
+}
+
+.subject {
+font-weight: 700;
+font-size: 18px;
+line-height: 2;
+columns: var(--secondary-text-color);
+}
+
+.tagline {
+font-weight: 400;
+font-size: 16px;
+line-height: 30px;
+letter-spacing: 0.03em;
+color: var(--primary-text-color-theme-light);
+}
+
+.picture {
+  cursor: pointer;
+}
+
+
