--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,10 @@
 body {
   font-family: var(--primary-font);
   background-color: var(--main-color);
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
+  background-color: var(--primary-text-color);
 }
 
 .link {
@@ -29,17 +33,18 @@ ul {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
-  letter-spacing: 0.03em; 
   color: var(--night-color);
 }
 
+.accent {
+  color: var(--secondary-text-color-theme-light);
+}
+
 .menu-link {
-font-family: var(--primary-font);
+font-family:  var(--primary-font);
 font-weight: 500;
-font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
-color: #212121;
 }
 
 .menu-link:hover,
@@ -47,14 +52,22 @@ color: #212121;
   color: var(--secondary-text-color-theme-light);
 }
 
+.current {
+  color: var(--secondary-text-color-theme-light);
+}
+
+.button.active {
+background-color: var(--secondary-text-color-theme-light);
+color: var(--primary-text-color);
+}
+
 .contact-mail,
 .contact-phone-number {
 font-family: var(--primary-font);
 font-weight: 500;
-font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
-color: #757575;
+color: var(--primary-text-color-theme-light);
 }
 
 .contact-mail:hover,
@@ -64,11 +77,8 @@ color: #757575;
 color: var(--secondary-text-color-theme-light);
 }
 
-.page-header {
-    background-color: var(--primary-text-color);
-}
 
-.pic {
+.hero {
     background-color: var(--accent-color);
 }
 
@@ -100,51 +110,37 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 }
 
-.caption {
-font-weight: 700;
-font-size: 14px;
+.about-title {
 line-height: 1.14;
-letter-spacing: 0.03em;
 text-transform: uppercase;
-color: var(--secondary-text-color);
 }
 
-.lead {
-font-weight: 400;
-font-size: 14px;
+.about-text {
 line-height: 1.71;
-letter-spacing: 0.03em;
 color: var(--primary-text-color-theme-light);
 }
 
 .subtitle {
-font-weight: 700;
 font-size: 36px;
-line-height: 42px;
+line-height: 1.17;
 text-align: center;
-letter-spacing: 0.03em;
-color: var(--secondary-text-color);
 }
 
-.aside {
+.team {
   background-color: var(--third-color);
 }
 
-.item {
+.team-name {
 font-weight: 500;
 font-size: 16px;
 line-height: 1.19;
 text-align: center;
-letter-spacing: 0.03em;
-color: var(--secondary-text-color);
 }
 
-.items {
-font-weight: 400;
+.team-position {
 font-size: 16px;
 line-height: 1.19;
 text-align: center;
-letter-spacing: 0.03em;
 color: var(--primary-text-color-theme-light);
 }
 
@@ -154,15 +150,19 @@ color: var(--primary-text-color-theme-light);
   background-color: var(--accent-color);
 }
 
+.address {
+  font-style: normal;
+}
+
 .footer-logo {
   color: var(--primary-text-color);
 }
 
+
+
 .maps {
 font-weight: 400;
-font-size: 14px;
 line-height: 1.71;
-letter-spacing: 0.03em;
 color: var(--primary-text-color);
 }
 
@@ -174,7 +174,6 @@ font-weight: 500;
 font-size: 16px;
 line-height: 1.6;
 text-align: center;
-letter-spacing: 0.03em;
 }
 
 .btn:focus,
@@ -183,18 +182,15 @@ letter-spacing: 0.03em;
   background-color: var(--secondary-text-color-theme-light);
 }
 
-.subject {
-font-weight: 700;
+.project-title {
 font-size: 18px;
 line-height: 2;
-columns: var(--secondary-text-color);
+letter-spacing: 0.06em;
 }
 
 .tagline {
-font-weight: 400;
 font-size: 16px;
-line-height: 30px;
-letter-spacing: 0.03em;
+line-height: 1.88;
 color: var(--primary-text-color-theme-light);
 }
 
