--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ font-family:  var(--primary-font);
 font-weight: 500;
 line-height: 1.14;
 letter-spacing: 0.02em;
+color: var(--secondary-text-color);
 }
 
 .menu-link:hover,
@@ -113,6 +114,7 @@ border-radius: 4px;
 .about-title {
 line-height: 1.14;
 text-transform: uppercase;
+font-size: 14px;
 }
 
 .about-text {
@@ -120,7 +122,7 @@ line-height: 1.71;
 color: var(--primary-text-color-theme-light);
 }
 
-.subtitle {
+.section-title {
 font-size: 36px;
 line-height: 1.17;
 text-align: center;
@@ -180,6 +182,11 @@ text-align: center;
 .btn:hover {
   color: var(--primary-text-color);
   background-color: var(--secondary-text-color-theme-light);
+}
+
+.active {
+  background-color: var(--secondary-text-color-theme-light);
+  color: var(--primary-text-color);
 }
 
 .project-title {
